# Zygomite

./: .gitignore  AGENTS.md  Cargo.toml  DB_REVERSE_ENGINEERING.md  PARITY.md  PLAN.md  README.md  analyze_core_closure.py  analyze_guide_structs.py  extract_asm.py  postprocess_newscripts.py
data/: README.md  opcode-aliases-910.txt  opcodes-910.txt  opcodes-925.txt  opcodes-948.txt  opcodes-format-925.txt  opcodes-large-910.txt  opcodes-large-925.txt  stack-effects.txt
data/commands/: chat.txt  config_db_table.txt  config_enums.txt  config_map_element.txt  config_misc.txt  config_objects.txt  config_quests.txt  core.txt  detail_options.txt  interface_components.txt  interface_misc.txt  login.txt  mini_menu_ops.txt  player_groups.txt  strings.txt  unknown.txt  world_switcher.txt
data/cs2/: categories-910.json  coverage-910.report.json  registry-910.json  registry-910.report.json
docs/: cli-refactor-plan.md  config-refactor-plan.md  cs2-compiler-audit.md  cs2-completeness-plan.md  interface-refactor-plan.md  map-refactor-plan.md  migrate-refactor-plan.md  overlay-plan-refactor-plan.md  protocol-registry-refactor-plan.md  validate-refactor-plan.md
examples/: decode_cs2.rs  dump_material_raw.rs  emit_runescript.rs  gen_lodestone_1092.rs  gen_necro_action_window.rs  gen_necro_page.rs  gen_necro_primary.rs  gen_necro_ribbon_icon.rs  gen_skillguide_slots.rs  infer_types.rs  parse_one_material.rs  probe_model_format.rs  roundtrip_runescript.rs  scale_probe.rs  scan_materials.rs  scan_vfx.rs  skillguide_grid.rs  trace_model_streams.rs  verify_branch_targets.rs
scripts/: derive-opcode-book.py  extract-stack-effects.py  protocol-payload-survey.py  split-scriptrunner.py  sync-legacy-data.sh  validate-structured-recompile.sh
src/: animator.rs  audio.rs  cache.rs  cli.rs  collision.rs  config.rs  config_dump.rs  config_refs.rs  config_transcode.rs  constants.rs  cs2_coverage.rs  cs2_datagen.rs  cs2_javagen.rs  cs2_registry.rs  cutscene2d.rs  data_closure.rs  decode.rs  dep_tree.rs  discover.rs  dump.rs  error.rs  explain.rs  explain_loc.rs  explain_transitive.rs  fixture.rs  interface.rs  interface_codec.rs  interface_index.rs  js5.rs  js5pack.rs  lib.rs  main.rs  map.rs  migrate.rs  model.rs  opcode_book.rs  overlay_deps.rs  overlay_manifest.rs  overlay_plan.rs  pack_root.rs  (+10 more)
src/cli/: context.rs  mod.rs  shared.rs
src/commands/: assemble.rs  audio.rs  build_collision.rs  config_extract.rs  cs2.rs  dep_tree.rs  dump.rs  migrate.rs  mod.rs  models.rs  transpile.rs  ts_export.rs  unpack.rs  validate.rs  verify_map.rs
src/config/: achievement.rs  bas.rs  db.rs  enums.rs  floor.rs  gfx.rs  hitmark.rs  idk.rs  loc.rs  material.rs  mel.rs  mod.rs  npc.rs  obj.rs  param.rs  particle.rs  quest.rs  quickchat.rs  seq.rs  spot.rs  structs.rs  texture.rs  vars.rs  water.rs  world.rs
src/cs2/: lint.rs  mod.rs
src/cs2_templates/: csc_header.txt  csc_tail_post.txt  csc_tail_pre.txt
src/font/: bitmap.rs  cli.rs  mod.rs  modern.rs  raster.rs  raster_awt.rs
src/interface/: component.rs  decode.rs  decode910.rs  deps.rs  mod.rs  render.rs  transcode.rs
src/map/: decode.rs  mod.rs  tests.rs  types.rs
src/migrate/: interface.rs  mod.rs  script.rs  tests.rs  types.rs
src/overlay_plan/: builder.rs  manifest.rs  mod.rs  plan_output.rs  refs.rs
src/port/: config.rs  interface.rs  lodestone.rs  material_storage.rs  mod.rs  plan.rs  relic.rs  represent.rs  ritual.rs  (+1 more)
tests/: config_port_oracle.rs  config_transcode_oracle.rs  cs2_coverage_real.rs  cs2_datagen_real.rs  cs2_javagen_real.rs  cs2_lint_splice_oracle.rs  cs2_opcode_registry_equiv.rs  cs2_registry_real.rs  decode_pack_root_oracle.rs  explain_interface_oracle.rs  explain_loc_oracle.rs  font_oracle.rs  interface_port_oracle.rs  interface_transcode_oracle.rs  opcode_book_oracle.rs  prepare_overlay.rs  protocol_real.rs  protocol_survey_oracle.rs  real_cache.rs  reversible_ts.rs  ritual_port_oracle.rs  stack_effects_oracle.rs  ts_export.rs  ts_idgen_real.rs
tools/: parity_audit.py
(+57 files in other folders)
