[package]
name = "rs3-cache-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bzip2 = "0.6.1"
clap = { version = "4.5.53", features = ["derive"] }
encoding_rs = "0.8.35"
flate2 = "1.1.5"
hex = "0.4.3"
image = { version = "0.25.9", default-features = false, features = ["png"] }
lzma-rs = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
rayon = "1.11.0"

[dev-dependencies]
tempfile = "3.23.0"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"
