[package]
name = "rs3-cache-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.100"
bzip2 = "0.6.1"
clap = { version = "4.5.53", features = ["derive"] }
encoding_rs = "0.8.35"
flate2 = "1.1.5"
hex = "0.4.3"
image = { version = "0.25.9", default-features = false, features = ["png"] }
lzma-rs = "0.3.0"
oxc_allocator = "0.133.0"
oxc_ast = "0.133.0"
oxc_parser = "0.133.0"
oxc_span = "0.133.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
rayon = "1.11.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
reflink-copy = "0.1.29"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
# Curated policy allows — kept here (not as a crate-level `#![allow]` in lib.rs) so they apply to
# ALL targets uniformly; examples/tests are separate crates that don't inherit lib.rs inner attrs.
# Binary cache parsing: frequent integer truncations/wraps between u8/u16/u32/i32/usize.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
checked_conversions = "allow"
# Parsers/codegen naturally have long functions and helper items after the main logic.
too_many_lines = "allow"
items_after_statements = "allow"
# Domain/style conventions used throughout (module naming, identical match arms, Option::map chains).
module_name_repetitions = "allow"
match_same_arms = "allow"
must_use_candidate = "allow"
map_unwrap_or = "allow"
return_self_not_must_use = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"
unused_self = "allow"
# Docs freely reference cache/CS2 identifiers without backticks; API docs still evolving.
# Internal subsystem docs use informal bullet lists (continuation/indent lints are noise here).
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
too_long_first_doc_paragraph = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
